# embstract

./: .gitattributes  .gitignore  CLA.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
code/: .clang-format  .clang-tidy
code/libs/embs_log/: CMakeLists.txt
code/libs/embs_log/api/embs_log/: config.h  levels.h  log.h  options.h
code/libs/embs_log_stdlib/: CMakeLists.txt
code/libs/embs_log_stdlib/api/embs_log_backend/: log_backend.h
code/libs/embs_log_stdlib/api/embs_log_stdlib/: log_stdlib.h
code/libs/embs_log_stdlib/src/: embs_log_stdlib.c
code/libs/expl_greatings_localization/: CMakeLists.txt
code/libs/expl_greatings_localization/api/expl_greatings_localization/: config.h  expl_greatings_localization.h
code/libs/expl_greatings_localization/src/: expl_greatings_localization.c
code/targets/hello_world/: CMakeLists.txt
code/targets/hello_world/config/: my_config.h
code/targets/hello_world/src/: main.cpp
docs/arch/: architecture.md
docs/dev/: copyright.md  folder_structure.md  tools.md
docs/includes/: acronyms.md
tools/: pyproject.toml
tools/build_env/cmake/toolchains/: toolchain-presets.json
tools/clang_format/: run_clang_format.py
tools/clang_format/docs/: clang_format.md
tools/clang_tidy/docs/: clang_tidy.md  run-clang-tidy.md
tools/cmake/modules/: embStract.cmake
tools/cmake/scripts/: embstract-presets.json  emstracto-presets.json  pclint_helper.cmake
tools/cmake/toolchains/: gcc-arm-none-eabi.cmake  gcc-host.cmake  toolchain-presets.json
tools/code_templates/module_name/api/: module_name.h
tools/code_templates/module_name/api/module_name/: api_name.h
tools/code_templates/module_name/docs/: module_name.md
tools/code_templates/module_name/src/: module_name.c  module_name_private_api.h
tools/code_templates/module_name/tests/: test_module_name.cpp  test_module_name.h
tools/dev/vscode/: embstracto.code-workspace
tools/doc/mkdocs/: mkdocs.yaml
tools/formatting/clang/: run_clang_format.py
tools/linting/clang/: clang-tidy.yaml  run_clang_tidy.py
tools/linting/pclint/: injection.h  options.lnt  run_pclint.py  std.lnt
tools/mkdocs/: mkdocs.yaml
tools/pclint/: pclint_compiler_config.schema.json  run_pclint.py  suppressions.lnt
tools/pclint/cmake/: pclint_compiler_config.json.in  pclint_helper.cmake
tools/pclint/config/: injection.h  options.lnt
tools/pclint/docs/: pclint.md  run-pclint.md
tools/python/: pyproject.toml
tools/vscode/: embstract.code-workspace
