[project]
name="embstracto-tools"
dynamic = ["version"]
description = "All python scripts needed by the project."
license = {file = "LICENSE"}
dependencies = [
    "mkdocs",
    "mkdocs-same-dir",
    "pymdown-extensions",
    "regex",
    "pyaml",
    "watchdog",
    "black"
]
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = [".."]
include = ["tools.clang_format","tools.clang_tidy", "tools.pclint"]

[project.scripts]
run-clang-format="tools.clang_format.run_clang_format:main"
run-clang-tidy="tools.clang_tidy.run_clang_tidy:main"
run-pclint="tools.pclint.run_pclint:cli"