[project]
name="embstract-tools"
dynamic = ["version"]
description = "All python scripts needed by the project."
license = {file = "LICENSE"}
dependencies = [
    "mkdocs",
    "mkdocs-same-dir",
    "pymdown-extensions",
    "regex",
    "pyaml",
    "watchdog",
    "black",
    "jsonschema"
]
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools"]

[tool.setuptools.package-dir]
clang_format = "clang_format"
clang_tidy = "clang_tidy"
pclint = "pclint"

[project.scripts]
run-clang-format="clang_format.run_clang_format:main"
run-clang-tidy="clang_tidy.run_clang_tidy:main"
run-pclint="pclint.run_pclint:cli"